tests/errors/UndefinedMethod.java
class UndefinedMethod
{
    public static void main(String[] a)
    {
		System.out.println(new Test().exec());
    }
}

class Test
{

}
